--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tcb-bassline",
   "version": "0.1.0-alpha",
   "description": "... Drop! Woo woo woo!",
-  "main": "./lib/index.js",
+  "main": "./lib/bassline.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
