--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/thecodebureau/bassline",
   "dependencies": {
-    "dustjs-linkedin": "^2.7.1"
+    "dustjs-linkedin": "^2.7.1",
+    "poirot": "^0.1.0"
   }
 }
