--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/thecodebureau/bassline",
   "dependencies": {
-    "dustjs-linkedin": "^2.7.1",
+    "dustjs-linkedin": "~2.6.2",
     "jquery-ancestors": "^0.1.0",
     "jquery-jsonify": "^0.1.0",
     "jquery-valet": "^0.1.0",
