--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "tcb-bassline",
+  "name": "ridge",
   "version": "0.1.3",
   "description": "... Drop! Woo woo woo!",
-  "main": "./lib/bassline.js",
+  "main": "./lib/ridge.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thecodebureau/bassline.git"
+    "url": "https://github.com/thecodebureau/ridge.git"
   },
   "keywords": [
     "backbone",
@@ -21,9 +21,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/thecodebureau/bassline/issues"
+    "url": "https://github.com/thecodebureau/ridge/issues"
   },
-  "homepage": "https://github.com/thecodebureau/bassline",
+  "homepage": "https://github.com/thecodebureau/ridge",
   "dependencies": {
     "dustjs-linkedin": "~2.6.2",
     "jquery-ancestors": "^0.1.0",
