--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ridge",
   "version": "0.4.0",
   "description": "... Drop! Woo woo woo!",
-  "main": "./lib/ridge.js",
+  "main": "./ridge.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
