--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "homepage": "https://github.com/thecodebureau/ridge",
   "dependencies": {
-    "dustjs-linkedin": "^2.7.2",
     "jquery-ancestors": "^0.1.0",
     "jquery-jsonify": "^0.1.0",
     "jquery-valet": "^0.2.0",
     "poirot": "^0.1.0"
+  },
+  "peerDependencies": {
+    "dustjs-linkedin": "^2.7.2"
   }
 }
