--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ridge",
-  "version": "0.5.2",
-  "description": "... Drop! Woo woo woo!",
+  "version": "0.5.3",
+  "description": "Non-agnostic attempt to bring structure to backbone apps.",
   "main": "./ridge.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
