Removed poirot and jquery-ancestors dependency, and moved requiring of jquery extensions to correct files (view.js and views/form.js)

--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
   },
   "peerDependencies": {
     "dustjs-linkedin": "^2.7.2",
-    "jquery-ancestors": "^0.1.0",
     "jquery-jsonify": "^0.1.0",
-    "jquery-valet": "^0.2.0",
-    "poirot": "^0.1.0"
+    "jquery-valet": "^0.2.0"
   }
 }
