--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "url": "https://github.com/thecodebureau/ridge.git"
   },
   "keywords": [
-    "backbone",
-    "dust"
+    "backbone"
   ],
   "author": "The Code Bureau <info@thecodebureau.com> (https://thecodebureau.com)",
   "contributors": [
@@ -23,10 +22,5 @@
   "bugs": {
     "url": "https://github.com/thecodebureau/ridge/issues"
   },
-  "homepage": "https://github.com/thecodebureau/ridge",
-  "dependencies": {
-  },
-  "peerDependencies": {
-    "dustjs-linkedin": "^2.7.2"
-  }
+  "homepage": "https://github.com/thecodebureau/ridge"
 }
