--- a/.eslintrc
+++ b/.eslintrc
@@ -1,49 +1,19 @@
 {
-	"extends": "airbnb-base/legacy",
-
-	"parserOptions": {
-		"sourceType": "strict"
-	},
-
-	"rules": {
-    "vars-on-top": 0,
+  "rules": {
+    "arrow-parens": [2, "always"],
+    "consistent-return": 0,
+    "func-names": 0,
     "global-require": 0,
-    "no-underscore-dangle": 0,
-		"default-case": 0,
-		"one-var": 0,
-		"no-unused-vars": [ 2, { "args": "none" } ],
-		"no-alert": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": [2, { "ignore": ["^[^./]"] }],
     "no-cond-assign": 0,
-		"quote-props": 0,
-		"no-nested-ternary": 0,
-		"no-use-before-define": [2, { "functions": false, "classes": true }],
-		"consistent-return": 0,
-		"no-eval": 0,
-		"prefer-arrow-callback": 0,
-		"array-bracket-spacing": 0,
-		"no-console": 0,
-		"indent": [ 2, 2, { "SwitchCase": 1 }],
-		"max-len": 0,
-		"comma-dangle": 0,
-		"no-param-reassign": 0,
-		"prefer-template": 0,
-		"curly": 0,
-		"func-names": 0,
-		"no-shadow": 0,
-		"spaced-comment": 0,
-		"strict": [ 2, "global" ]
-	},
-
-	globals: {
-		"$": true,
-		"_": true,
-		"ENV": true,
-		"google": true,
-		"INITIAL_STATE": true,
-		"INITIAL_CONTEXT": true,
-		"LOGIN_USER": true,
-		"PWD": true,
-		"FB": true,
-		"Backbone": true
-	}
+    "no-console": [1, { "allow": ["warn", "error", "info"] }],
+    "no-empty": [2, { "allowEmptyCatch": true }],
+    "no-mixed-operators": 0,
+    "no-param-reassign": 0,
+    "no-plusplus": [2, { "allowForLoopAfterthoughts": true } ],
+    "no-shadow": 0,
+    "no-underscore-dangle": 0,
+    "no-use-before-define": [2, { "functions": false, "classes": false }]
+  }
 }
