--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Non-agnostic attempt to bring structure to backbone apps.",
   "main": "./ridge.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf *.js cjs mixins util views",
+    "lint": "eslint src",
+    "build": "npm run build:cjs && npm run build:es",
+    "build:cjs": "BABEL_ENV=cjs babel src --out-dir cjs",
+    "build:es": "BABEL_ENV=es babel src --out-dir .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "npm run clean && npm run lint && npm run build",
+    "preversion": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -22,5 +29,19 @@
   "bugs": {
     "url": "https://github.com/thecodebureau/ridge/issues"
   },
-  "homepage": "https://github.com/thecodebureau/ridge"
+  "homepage": "https://github.com/thecodebureau/ridge",
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-node6": "^0.3.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "babel-register": "^6.18.0",
+    "eslint": "^3.9.0",
+    "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "rimraf": "^2.5.4",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.2"
+  }
 }
